--- a/index.html
+++ b/index.html
@@ -13,24 +13,25 @@
 <body>
     <div class="img float-container">
         <div class="float-child">
-            <img src="robot-emotions.gif" height="400px">
-        </div>
-        <div class="float-child">
             <span class="cd-intro">
                 <h1 class="cd-headline clip is-full-width">
                     <span style="margin-top: 8%;">
-                        <span style=" font-family: 'Handlee', cursive;font-weight: 800;font-size: 80px;">Dhwani Kshatriya</span>
+                        <span style=" font-family: 'Handlee', cursive;font-weight: 800;font-size: 80px;">Dhwani
+                            Kshatriya</span>
                         <br>
                         <span style="color: rgb(61, 61, 61);">I am </span>
                         <span class="cd-words-wrapper" style="color: rgb(61, 61, 61);">
                             <b class="is-visible">Web Engineer</b>
-                            <b>MEAN Stack Dev</b>
+                            <b>MEAN Dev</b>
                             <b>a Dancer</b>
                             <b>a Proud Indian</b>
                         </span>
                     </span>
                 </h1>
             </span>
+        </div>
+        <div class="float-child">
+            <img src="robot-emotions.gif" class="gifwidth" height="400px">
         </div>
     </div>
 </body>
