changes for footer

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             <span class="cd-words-wrapper" style="color: rgb(61, 61, 61);">
                                 <b class="is-visible">Web Engineer</b>
                                 <b>MEAN Dev</b>
-                                <b>a Dancer</b>
+                                <b>a gregarious</b>
                                 <b>a Proud Indian</b>
                             </span>
                         </span>
@@ -62,34 +62,67 @@
         <div class="float-child" style="margin-top: 70px;">
             <h1>About me.</h1>
             <p>
-                Hi I am Dhwani Kshatriya, a 23 year old DOM Manipulation Engineer,a MEAN stack dev and a
+                Hi! I am Dhwani Kshatriya, a 23 year old DOM Manipulation Engineer,a MEAN stack dev and a
                 passionate Dancer living in <a href="https://goo.gl/maps/Y2Bm1DxsZ4bM3fNo6" target="_blank">Gujarat
-                    India</a>. I am a Computer Science Engineer, currently working with
-                awesome
-                folks at <a href="http://www.infoobjects.com/" rel="nofollow" target="_blank">InfoObjects, India
+                    India</a>. A Computer Science Engineer,professionally graduated from <a
+                    href="https://www.daiict.ac.in/" target="_blank">DAIICT,</a> and currently working with some
+                awesome folks at <a href="http://www.infoobjects.com/" rel="nofollow" target="_blank">InfoObjects, India
                     Development Center</a>.
             </p>
             <p>
                 Have a look at my <a href="#myskills">skills</a> or just connect with me on <a
                     href="https://www.linkedin.com/in/dhwani-kshatriya-034b65146" target="_blank">LinkedIn</a>. I am
-                always excited to meet new like minded people and also like to explore
+                always excited to meet new like minded people and also like to explore the breathtaking 
                 heritage sites of India.
             </p>
         </div>
     </section>
+    <hr class="num">
+    <!-- <section class="numbers-wrapper float-container">
+      <section class="numbers-inner-wrapper">
+        <div class="numbers">
+          <h4 id="coded-lines">160 000</h4>
+          <span>lines of code</span>
+        </div>
+        <div class="numbers">
+          <h4 id="rendered-pixels">301 783 509</h4>
+          <span>pixels rendered</span>
+        </div>
+        <div class="numbers">
+          <h4 id="coffee-cups">1512</h4>
+          <span>cups of coffee drunk</span>
+        </div>
+        <div class="numbers">
+          <h4 id="projects-completed">26</h4>
+          <span>projects completed</span>
+        </div>
+      </section>
+    </section> -->
     <section class="float-container">
         <div class="footer">
-            <div class="float-child3 footer1">
-            </div>
-            <div class="float-child3 footer1">
+            <div class="float-child3 footer1" style="margin-left: 20%;">
                 <p>
-                    <span style=" font-family: 'Handlee', cursive;font-weight: 800;font-size: 50px; color:black;">Dhwani Kshatriya</span>
+                    <span style=" font-family: 'Handlee', cursive;font-weight: 800;font-size: 50px; color:black;">Dhwani
+                        Kshatriya</span>
                 </p>
                 <p>
                     Made with <i class="fa fa-heart" style="color: red;"></i> in India
                 </p>
             </div>
-            <div class="float-child3">
+            <div class="float-child3 footer1">
+                <p>
+                    You can connect with me anywhere
+                    <ul class="tools"style="margin-left : -30px; !important">
+                        <li><a href="https://github.com/Dhwani7761" target="_blank"><i class="fa fa-github"
+                                    style="color: black;"></i></a></li>
+                        <li><a href="https://www.facebook.com/dhwani.kshatriya.9" target="_blank"><i
+                                    class="fa fa-facebook-official" style="color: rgb(73, 73, 240);"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/dhwani-kshatriya-034b65146" target="_blank"><i
+                                    class="fa fa-linkedin-square"></i></a></li>
+                        <li><a href="mailto:dhwanikshatriya77@gmail.com" target="_blank"><i class="fa fa-envelope-o"
+                                    style="color: red;"></i></a></li>
+                    </ul>
+                </p>
             </div>
         </div>
     </section>
