--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="topnav " id="myTopnav">
         <a href="#me">About</a>
-        <a href="#news">Skills</a>
+        <a href="#skills">Skills</a>
         <a href="#contact">Contact</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
@@ -70,37 +70,127 @@
                     Development Center</a>.
             </p>
             <p>
-                Have a look at my <a href="#myskills">skills</a> or just connect with me on <a
+                Have a look at my <a href="#skills">skills</a> or just connect with me on <a
                     href="https://www.linkedin.com/in/dhwani-kshatriya-034b65146" target="_blank">LinkedIn</a>. I am
-                always excited to meet new like minded people and also like to explore the breathtaking 
+                always excited to meet new like minded people and also like to explore the breathtaking
                 heritage sites of India.
             </p>
         </div>
     </section>
+
     <hr class="num">
-    <!-- <section class="numbers-wrapper float-container">
-      <section class="numbers-inner-wrapper">
-        <div class="numbers">
-          <h4 id="coded-lines">160 000</h4>
-          <span>lines of code</span>
+    <section class="numbers-wrapper">
+        <section class="numbers-inner-wrapper">
+            <div class="numbers">
+                <h4 id="coded-lines">15000
+                    <br>
+                    <span class="number-text">
+                        Lines of code
+                    </span>
+                </h4>
+            </div>
+            <div class="numbers">
+                <h4 id="rendered-pixels">1.5 Years
+                    <br>
+                    <span class="number-text">
+                        Experience
+                    </span>
+                </h4>
+            </div>
+            <div class="numbers">
+                <h4 id="coffee-cups">1000
+                    <br>
+                    <span class="number-text">cups of Tea </span>
+                </h4>
+            </div>
+            <div class="numbers">
+                <h4 id="projects-completed">18
+                    <br>
+                    <span class="number-text">Projects</span>
+                </h4>
+            </div>
+        </section>
+    </section>
+    <hr class="num">
+
+    <section id="skills">
+        <div id="names">
+            <h3 class="bactive" id="hards"><span class="skill-name">Skills</span></h3>
+            <h3 id="softs"></h3>
+        </div></br>
+        <div id="hbars">
+            <div class="row col-sm-12">
+                <div class="col-sm-6">
+                    <div class="bar hbar" data-percent="90">
+                        <h3>Node</h3>
+                        <canvas class="bar-circle" width="70" height="70"></canvas>
+                    </div>
+                    <div class="bar hbar" data-percent="90">
+                        <h3>Express</h3>
+                        <canvas class="bar-circle" width="70" height="70"></canvas>
+                    </div>
+                    <div class="bar hbar" data-percent="60">
+                        <h3>Microservices</h3>
+                        <canvas class="bar-circle" width="70" height="70"></canvas>
+                    </div>
+                    <div class="bar hbar" data-percent="90">
+                        <h3>Javascript</h3>
+                        <canvas class="bar-circle" width="70" height="70"></canvas>
+                    </div>
+                    <div class="bar hbar" data-percent="70">
+                        <h3>Angular</h3>
+                        <canvas class="bar-circle" width="70" height="70"></canvas>
+                    </div>
+                    <div class="bar hbar" data-percent="80">
+                        <h3>HTML</h3>
+                        <canvas class="bar-circle" width="70" height="70"></canvas>
+                    </div>
+                    <div class="bar hbar" data-percent="75">
+                        <h3>CSS</h3>
+                        <canvas class="bar-circle" width="70" height="70"></canvas>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="bar hbar" data-percent="90">
+                        <h3>Rest APIs</h3>
+                        <canvas class="bar-circle" width="70" height="70"></canvas>
+                    </div>
+                    <div class="bar hbar" data-percent="80">
+                        <h3>MongoDB</h3>
+                        <canvas class="bar-circle" width="70" height="70"></canvas>
+                    </div>
+                    <div class="bar hbar" data-percent="80">
+                        <h3>SQL</h3>
+                        <canvas class="bar-circle" width="70" height="70"></canvas>
+                    </div>
+                    <div class="bar hbar" data-percent="95">
+                        <h3>Git</h3>
+                        <canvas class="bar-circle" width="70" height="70"></canvas>
+                    </div>
+                    <div class="bar hbar" data-percent="95">
+                        <h3>Agile</h3>
+                        <canvas class="bar-circle" width="70" height="70"></canvas>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="numbers">
-          <h4 id="rendered-pixels">301 783 509</h4>
-          <span>pixels rendered</span>
-        </div>
-        <div class="numbers">
-          <h4 id="coffee-cups">1512</h4>
-          <span>cups of coffee drunk</span>
-        </div>
-        <div class="numbers">
-          <h4 id="projects-completed">26</h4>
-          <span>projects completed</span>
-        </div>
-      </section>
-    </section> -->
-    <section class="float-container">
+    </section>
+
+    <hr class="num">
+    <section id="contact">
+        <form>      
+            <h1 class="contact-me">Contact me.</h1>
+            <input name="name" type="text" class="feedback-input" placeholder="Name" />   
+            <input name="email" type="text" class="feedback-input" placeholder="Email" />
+            <textarea name="text" class="feedback-input" placeholder="Comment"></textarea>
+            <input type="submit" value="SUBMIT"/>
+          </form>
+    </section>
+
+
+    <section>
         <div class="footer">
-            <div class="float-child3 footer1" style="margin-left: 20%;">
+            <div class="float-child3" style="margin-left: 20%;">
                 <p>
                     <span style=" font-family: 'Handlee', cursive;font-weight: 800;font-size: 50px; color:black;">Dhwani
                         Kshatriya</span>
@@ -109,19 +199,19 @@
                     Made with <i class="fa fa-heart" style="color: red;"></i> in India
                 </p>
             </div>
-            <div class="float-child3 footer1">
+            <div class="float-child3">
                 <p>
                     You can connect with me anywhere
-                    <ul class="tools"style="margin-left : -30px; !important">
-                        <li><a href="https://github.com/Dhwani7761" target="_blank"><i class="fa fa-github"
-                                    style="color: black;"></i></a></li>
-                        <li><a href="https://www.facebook.com/dhwani.kshatriya.9" target="_blank"><i
-                                    class="fa fa-facebook-official" style="color: rgb(73, 73, 240);"></i></a></li>
-                        <li><a href="https://www.linkedin.com/in/dhwani-kshatriya-034b65146" target="_blank"><i
-                                    class="fa fa-linkedin-square"></i></a></li>
-                        <li><a href="mailto:dhwanikshatriya77@gmail.com" target="_blank"><i class="fa fa-envelope-o"
-                                    style="color: red;"></i></a></li>
-                    </ul>
+                <ul class="tools" style="margin-left : -30px !important">
+                    <li><a href="https://github.com/Dhwani7761" target="_blank"><i class="fa fa-github"
+                                style="color: black;"></i></a></li>
+                    <li><a href="https://www.facebook.com/dhwani.kshatriya.9" target="_blank"><i
+                                class="fa fa-facebook-official" style="color: rgb(73, 73, 240);"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/dhwani-kshatriya-034b65146" target="_blank"><i
+                                class="fa fa-linkedin-square"></i></a></li>
+                    <li><a href="mailto:dhwanikshatriya77@gmail.com" target="_blank"><i class="fa fa-envelope-o"
+                                style="color: red;"></i></a></li>
+                </ul>
                 </p>
             </div>
         </div>
@@ -140,6 +230,26 @@
     }
 
     jQuery(document).ready(function ($) {
+
+        $("#hards").click(function () {
+            $(".sbar")
+                .filter(function () { return !$(this).is(":hidden"); })
+                .fadeOut(200, function () {
+                    $('.hbar,.hbars').fadeIn(300);
+                });
+            $('#softs').removeClass("bactive");
+            $('#hards').addClass("bactive");
+        });
+        $("#softs").click(function () {
+            $(".hbar")
+                .filter(function () { return !$(this).is(":hidden"); })
+                .fadeOut(200, function () {
+                    $('.sbar,.sbars').fadeIn(300);
+                });
+            $('#hards').removeClass("bactive");
+            $('#softs').addClass("bactive");
+        });
+
         //set animation timing
         var animationDelay = 2500,
             //loading bar effect
@@ -325,6 +435,102 @@
             $newWord.removeClass('is-hidden').addClass('is-visible');
         }
     });
+
+    (function () {
+
+        var Progress = function (element) {
+
+            this.context = element.getContext("2d");
+            this.refElement = element.parentNode;
+            this.loaded = 0;
+            this.start = 4.72;
+            this.width = this.context.canvas.width;
+            this.height = this.context.canvas.height;
+            this.total = parseInt(this.refElement.dataset.percent, 10);
+            this.timer = null;
+
+            this.diff = 0;
+
+            this.init();
+        };
+
+        Progress.prototype = {
+            init: function () {
+                var self = this;
+                self.timer = setInterval(function () {
+                    self.run();
+                }, 25);
+            },
+            run: function () {
+                var self = this;
+
+                self.diff = ((self.loaded / 100) * Math.PI * 2 * 10).toFixed(2);
+                self.context.clearRect(0, 0, self.width, self.height);
+                self.context.lineWidth = 4;
+                self.context.fillStyle = "#000";
+                self.context.strokeStyle = "#BBD2EF";
+                self.context.textAlign = "center";
+
+                self.context.fillText(self.loaded + "%", self.width * .5, self.height * .5 + 2, self.width);
+                self.context.beginPath();
+                self.context.arc(35, 35, 30, self.start, self.diff / 10 + self.start, false);
+                self.context.stroke();
+
+                if (self.loaded >= self.total) {
+                    clearInterval(self.timer);
+                }
+
+                self.loaded++;
+            }
+        };
+
+        var CircularSkillBar = function (elements) {
+            this.bars = document.querySelectorAll(elements);
+            if (this.bars.length > 0) {
+                this.init();
+            }
+        };
+
+        CircularSkillBar.prototype = {
+            init: function () {
+                this.tick = 25;
+                this.progress();
+
+            },
+            progress: function () {
+                var self = this;
+                var index = 0;
+                var firstCanvas = self.bars[0].querySelector("canvas");
+                var firstProg = new Progress(firstCanvas);
+
+
+
+                var timer = setInterval(function () {
+                    index++;
+
+                    var canvas = self.bars[index].querySelector("canvas");
+                    var prog = new Progress(canvas);
+
+                    if (index == self.bars.length) {
+                        clearInterval(timer);
+                    }
+
+                }, self.tick * 100);
+
+            }
+        };
+        var button = document.getElementById("softs");
+
+        button.addEventListener("click", function () {
+            var circularBars = new CircularSkillBar("#sbars .sbar");
+        }, false);
+        document.addEventListener("DOMContentLoaded", function () {
+            var circularBars = new CircularSkillBar("#hbars .hbar");
+        });
+    })();
+
+
+
 </script>
 
 </html>
