Color changes for skill

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <section class="numbers-wrapper">
         <section class="numbers-inner-wrapper">
             <div class="numbers">
-                <h4 id="coded-lines">15000
+                <h4 id="coded-lines">30,000
                     <br>
                     <span class="number-text">
                         Lines of code
@@ -468,7 +468,7 @@
                 self.context.clearRect(0, 0, self.width, self.height);
                 self.context.lineWidth = 4;
                 self.context.fillStyle = "#000";
-                self.context.strokeStyle = "#BBD2EF";
+                self.context.strokeStyle = "#CC4949";
                 self.context.textAlign = "center";
 
                 self.context.fillText(self.loaded + "%", self.width * .5, self.height * .5 + 2, self.width);
