--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
                 passionate Dancer living in <a href="https://goo.gl/maps/Y2Bm1DxsZ4bM3fNo6" target="_blank">Gujarat
                     India</a>. A Computer Science Engineer,professionally graduated from <a
                     href="https://www.daiict.ac.in/" target="_blank">DAIICT,</a> and currently working with some
-                awesome folks at <a href="http://www.infoobjects.com/" rel="nofollow" target="_blank">InfoObjects, India
-                    Development Center</a>.
+                awesome folks at <a href="https://www.shiprocket.in/" rel="nofollow" target="_blank">Shiprocket, Delhi,India</a>.
             </p>
             <p>
                 Have a look at my <a href="#skills">skills</a> or just connect with me on <a
