--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
                             <span style=" font-family: 'Handlee', cursive;font-weight: 800;font-size: 80px;">Dhwani
                                 Kshatriya</span>
                             <br>
-                            <span style="color: rgb(61, 61, 61);">I am </span>
+                            <!-- <span style="color: rgb(61, 61, 61);">I am </span> -->
                             <span class="cd-words-wrapper" style="color: rgb(61, 61, 61);">
                                 <b class="is-visible">Web Engineer</b>
-                                <b>MEAN Dev</b>
-                                <b>a gregarious</b>
-                                <b>a Proud Indian</b>
+                                <b>MEAN Stack Dev</b>
+                                <b>A gregarious</b>
+                                <b>A Proud Indian</b>
                             </span>
                         </span>
                     </h1>
@@ -63,7 +63,7 @@
         <div class="float-child" style="margin-top: 70px;">
             <h1>About me.</h1>
             <p>
-                Hi! I am Dhwani Kshatriya, a 23 year old DOM Manipulation Engineer,a MEAN stack dev and a
+                Hi! I am Dhwani Kshatriya, a 24 year old DOM Manipulation Engineer,a MEAN stack developer and a
                 passionate Dancer living in <a href="https://goo.gl/maps/Y2Bm1DxsZ4bM3fNo6" target="_blank">Gujarat
                     India</a>. A Computer Science Engineer,professionally graduated from <a
                     href="https://www.daiict.ac.in/" target="_blank">DAIICT,</a> and currently working with some
@@ -72,7 +72,7 @@
             <p>
                 Have a look at my <a href="#skills">skills</a> or just connect with me on <a
                     href="https://www.linkedin.com/in/dhwani-kshatriya-034b65146" target="_blank">LinkedIn</a>. I am
-                always excited to meet new like minded people and also like to explore the breathtaking
+                always excited to meet new like minded people and explore the breathtaking
                 heritage sites of India.
             </p>
         </div>
@@ -82,7 +82,7 @@
     <section class="numbers-wrapper">
         <section class="numbers-inner-wrapper">
             <div class="numbers">
-                <h4 id="coded-lines">20,000
+                <h4 id="coded-lines">40,000+
                     <br>
                     <span class="number-text">
                         Lines of code
@@ -90,7 +90,7 @@
                 </h4>
             </div>
             <div class="numbers">
-                <h4 id="rendered-pixels">1.5 Years
+                <h4 id="rendered-pixels">1.9 Years
                     <br>
                     <span class="number-text">
                         Experience
@@ -104,7 +104,7 @@
                 </h4>
             </div>
             <div class="numbers">
-                <h4 id="projects-completed">11
+                <h4 id="projects-completed">7
                     <br>
                     <span class="number-text">Projects</span>
                 </h4>
@@ -118,7 +118,7 @@
             <h3 class="bactive" id="hards"><span class="skill-name">Skills</span></h3>
             <h3 id="softs"></h3>
         </div></br>
-        <div id="hbars">
+        <div id="hbars" style="width: 80%;margin: auto;padding: 10px">
             <div class="row col-sm-12">
                 <div class="col-sm-6">
                     <div class="bar hbar" data-percent="90">
@@ -129,30 +129,26 @@
                         <h3>Express</h3>
                         <canvas class="bar-circle" width="70" height="70"></canvas>
                     </div>
-                    <div class="bar hbar" data-percent="60">
-                        <h3>Microservices</h3>
-                        <canvas class="bar-circle" width="70" height="70"></canvas>
-                    </div>
                     <div class="bar hbar" data-percent="90">
                         <h3>Javascript</h3>
+                        <canvas class="bar-circle" width="70" height="70"></canvas>
+                    </div>
+                    <div class="bar hbar" data-percent="80">
+                        <h3>Typescript</h3>
                         <canvas class="bar-circle" width="70" height="70"></canvas>
                     </div>
                     <div class="bar hbar" data-percent="70">
                         <h3>Angular</h3>
                         <canvas class="bar-circle" width="70" height="70"></canvas>
                     </div>
+                </div>
+                <div class="col-sm-6">
                     <div class="bar hbar" data-percent="80">
                         <h3>HTML</h3>
                         <canvas class="bar-circle" width="70" height="70"></canvas>
                     </div>
-                    <div class="bar hbar" data-percent="75">
+                    <div class="bar hbar" data-percent="80">
                         <h3>CSS</h3>
-                        <canvas class="bar-circle" width="70" height="70"></canvas>
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <div class="bar hbar" data-percent="90">
-                        <h3>Rest APIs</h3>
                         <canvas class="bar-circle" width="70" height="70"></canvas>
                     </div>
                     <div class="bar hbar" data-percent="80">
@@ -167,10 +163,6 @@
                         <h3>Git</h3>
                         <canvas class="bar-circle" width="70" height="70"></canvas>
                     </div>
-                    <div class="bar hbar" data-percent="95">
-                        <h3>Agile</h3>
-                        <canvas class="bar-circle" width="70" height="70"></canvas>
-                    </div>
                 </div>
             </div>
         </div>
@@ -183,16 +175,17 @@
             <input name="name" type="text" class="feedback-input" placeholder="Name" />   
             <input name="email" type="text" class="feedback-input" placeholder="Email" />
             <textarea name="text" class="feedback-input" placeholder="Comment"></textarea>
-            <input type="submit" value="SUBMIT"/>
+            <input type="submit" value="Submit"/>
           </form>
     </section>
 
 
+    <hr class="num">
     <section>
         <div class="footer">
             <div class="float-child3" style="margin-left: 20%;">
                 <p>
-                    <span style=" font-family: 'Handlee', cursive;font-weight: 800;font-size: 50px; color:black;">Dhwani
+                    <span style="font-family: 'Handlee', cursive;font-weight: 800;font-size: 50px; color:black;">Dhwani
                         Kshatriya</span>
                 </p>
                 <p>
