Changed from shiprocket to BCG

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                             <br>
                             <!-- <span style="color: rgb(61, 61, 61);">I am </span> -->
                             <span class="cd-words-wrapper" style="color: rgb(61, 61, 61);">
-                                <b class="is-visible">Web Engineer</b>
-                                <b>MEAN Stack Dev</b>
+                                <b class="is-visible">Software Engineer</b>
+                                <b>Full Stack Dev</b>
                                 <b>A gregarious</b>
                                 <b>A Proud Indian</b>
                             </span>
@@ -67,7 +67,7 @@
                 passionate Dancer living in <a href="https://goo.gl/maps/Y2Bm1DxsZ4bM3fNo6" target="_blank">Gujarat
                     India</a>. A Computer Science Engineer,professionally graduated from <a
                     href="https://www.daiict.ac.in/" target="_blank">DAIICT,</a> and currently working with some
-                awesome folks at <a href="https://www.shiprocket.in/" rel="nofollow" target="_blank">Shiprocket, Delhi,India</a>.
+                awesome folks at <a href="https://www.bcg.com/x" rel="nofollow" target="_blank">The Boston Consulting Group,Gurgoan,India</a>.
             </p>
             <p>
                 Have a look at my <a href="#skills">skills</a> or just connect with me on <a
