--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
         <div class="float-child" style="margin-top: 70px;">
             <h1>About me.</h1>
             <p>
-                Hi! I am Dhwani Kshatriya, a 24 year old DOM Manipulation Engineer,a MEAN stack developer and a
+                Hi! I am Dhwani Kshatriya, a 25 year old Full stack developer having experience working in Python, Node, React and Angular and also a
                 passionate Dancer living in <a href="https://goo.gl/maps/Y2Bm1DxsZ4bM3fNo6" target="_blank">Gujarat
-                    India</a>. A Computer Science Engineer,professionally graduated from <a
+                    India</a>. A Computer Science Engineer, professionally graduated from <a
                     href="https://www.daiict.ac.in/" target="_blank">DAIICT,</a> and currently working with some
                 awesome folks at <a href="https://www.bcg.com/x" rel="nofollow" target="_blank">The Boston Consulting Group,Gurgoan,India</a>.
             </p>
@@ -89,7 +89,7 @@
                 </h4>
             </div>
             <div class="numbers">
-                <h4 id="rendered-pixels">1.9 Years
+                <h4 id="rendered-pixels">3 Years
                     <br>
                     <span class="number-text">
                         Experience
@@ -97,13 +97,13 @@
                 </h4>
             </div>
             <div class="numbers">
-                <h4 id="coffee-cups">500
+                <h4 id="coffee-cups">200
                     <br>
                     <span class="number-text">cups of Tea </span>
                 </h4>
             </div>
             <div class="numbers">
-                <h4 id="projects-completed">7
+                <h4 id="projects-completed">7+
                     <br>
                     <span class="number-text">Projects</span>
                 </h4>
